<resources>
    <string name="app_name">TriggerInFence</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="trigger_in_fence">Trigger In Fence</string>
    <string name="fence_distance">Fence Distance</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="refresh">Refresh</string>
    <string name="set">Set</string>
    <string name="set_msg">Go to center of your fence location click set button to fence it</string>
    <string name="status_msg">Status</string>
    <string name="refresh_msg">Click refresh button to setup permission and its related configurations</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>